Fri Jun 29 09:36:49 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Encode correctly spelt queries in UTF8,
	  for consistency with output of Xapian.
	* secore/searchconnection_doctest2.txt: Test spelling correction
	  with unicode strings.

Fri Jun 29 09:00:14 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/indexerconnection_doctest3.txt,
	  secore/searchconnection_doctest2.txt: Improve test coverage.

Fri Jun 29 08:47:34 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst,secore/: Finally, properly implement and
	  document the spelling correction support.

Thu Jun 28 23:33:06 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst: Fix documentation of parameters to
	  INDEX_FREETEXT, and adjust an example to give expected output
	  after recent fix to highlighting.
	* secore/fieldactions.py: Add an option allowing indexing without
	  positional information, and an option allowing indexing with
	  spelling correction.
	* secore/highlight.py,secore/searchconnection_doctest1.txt: Update
	  output of examples to match recent fix to highlighting.

Thu Jun 28 15:26:36 BST 2007  Tom Mortimer <tom@lemurconsulting.com>

	* secore/fieldactions.py: Add stopwording, and an option not to
	  store prefixed terms, to freetext indexing.
	* secore/highlight.py: Fix a bug causing the requested maxlength to
	  be exceeded if the derived blocks were too big.

Fri Jun 08 15:37:21 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS,testdata/query_sourcewords.txt: Add source words for
	  generating queries to test with, and list the copyright holders
	  in AUTHORS.
	* perftest/: Add some routines for performing performance tests,
	  and analysing the logs of these tests.
	* perftest/parse_wikipedia/: Add some routines which convert XML
	  dumps of wikipedia data into scriptindex compatible forms.
