@@ -1,3 +1,8 @@
+Sun Jul 01 18:13:34 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* secore/searchconnection.py: Add query_all(), to make a search 
+	  matching all documents in the database.
+
 Fri Jun 29 09:36:49 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* secore/searchconnection.py: Encode correctly spelt queries in UTF8,
